--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
